Criando componentes para armazenar dados e utilizando o useFocusEffect.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
       "@screens/*": [
         "./src/screens/*"
       ],
-      "@storege/*": [
-        "./src/storege/*"
+      "@storage/*": [
+        "./src/storage/*"
       ],
       "@utils/*": [
         "./src/utils/*"
